tests/rosetta/transpiler/Pascal/active-directory-search-for-a-user.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/active-directory-search-for-a-user.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,Main.StrArray>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
active-directory-search-for-a-user.pas(39,17) Note: Call to subroutine "function TFPGMap<System.ShortString,Main.StrArray>.GetKeyData(const AKey:ShortString):{Dynamic} Array Of ShortString;" marked as inline is not inlined
active-directory-search-for-a-user.pas(45,44) Error: Incompatible type for arg no. 1: Got "Anon2", expected "TFPGMap<System.ShortString,Main.StrArray>"
active-directory-search-for-a-user.pas(65) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
